Changes in BB version 2014.10-1

   o	Added files in inst/extraTests.

   o	Reverted back to solve.QP from quadprog because of some failures in the 
   	special version added in 2014.1-1.

   o	Changed conditional require() in some functions to requireNamespace().

   o	Removed unused geval from spg() and documented that geval is equal 
   	to iter.

   o	Fixed NAMESPACE to import optim from stats.

   o	Adjusted BB vignette text regarding a dfsane() failure.

Changes in BB version 2014.1-1

   o	Added a special version of solve.QP and removed quadprog from Imports.

Changes in BB version 2013.11-1

   o	Changed quadprog from Depends to Imports.

Changes in BB version 2013.5-1

   o	Removed contact email addresses from BB-package.Rd (which were 
   	outdated) and other information in that file that duplicated
	the DESCRIPTION file.

Changes in BB version 2013.4-1

   o	Further adjustment to DESCRIPTION and moved LICENSE to LICENSE.note
   	file, after discussions about appropriate place for statements,
	and added additional clarification of various roles.

   o	Changed checkGrad default in spg skip the check if, based on the first 
	function evaluation, it is estimated to take more than ten seconds.

Changes in BB version 2012.12-1

   o	Added  ByteCompile: yes in DESCRIPTION file.

Changes in BB version 2012.8-1

   o	Added a control argument named `checkGrad' to the functions `spg' 
   	and `BBoptim'.  This defaults to TRUE, which means that the 
	user-specified gradient will be checked against numerical gradient.
	It should be set to FALSE for high-dimensional problems, after 
	ensuring that the analytic gradient is correctly specified.

Changes in BB version 2012.3-1

   o	fixed use of break in a non-loop context in sane and dfsane.

Changes in BB version 2011.12-1

   o	Set trace=TRUE as default in BBoptim.

   o	Included project and projectArgs as arguments in multiStart.

Changes in BB version 2011.11-1

   o	updated maintainer email address.
